add: new region - deep water deep fakes

--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body {
   font-size: 3em;
   color: #8b5e3c; /* Wood color */
   text-align: center;
-  margin-top: 30px;
+  margin-top: 0px;
   background: url('./graphics/parchment.png') center/cover;
   padding: 10px 20px;
   border: 3px solid #d9a86c; /* Rope-like color */
@@ -37,7 +37,20 @@ body {
   transform: rotate(-2deg);
   letter-spacing: 1px;
   width: 80%;
+  z-index: 20;
 }
+
+.title-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%; 
+  margin: 0px 0; 
+  z-index: 10;
+  position: relative;
+  top:40px;
+}
+
 
 
 .map-area {
