--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,21 @@
+.caveat-brush-regular {
+  font-family: "Caveat Brush", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+
 body {
   margin: 0;
   font-family: Arial, sans-serif;
   background-color: #f4f4f9;
+
+  background-image: url('./graphics/background.webp');
+  background-size: cover; /* Ensures the image covers the entire viewport */
+  background-position: center; /* Centers the image */
+  background-repeat: no-repeat; /* Prevents tiling */
+  height: 100vh; /* Ensures the body fills the entire viewport */
+  margin: 0; /* Removes default margins */
 }
 
 #game-container {
@@ -25,8 +39,7 @@ body {
 }
 
 .game-title {
-  font-family: 'Pirata One', serif;
-  font-size: 3em;
+  font-size: 4em;
   color: #8b5e3c; /* Wood color */
   text-align: center;
   margin-top: 0px;
@@ -34,10 +47,15 @@ body {
   padding: 10px 20px;
   border: 4px solid #d9a86c; /* Rope-like color */
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
-  transform: rotate(-2deg);
+  transform: rotate(-1.5deg);
   letter-spacing: 1px;
-  width: 80%;
+  width: 60%;
   z-index: 20;
+
+  font-family: "Caveat Brush", serif;
+  font-weight: 400;
+  font-style: normal;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .title-wrapper {
@@ -48,7 +66,7 @@ body {
   margin: 0px 0; 
   z-index: 10;
   position: relative;
-  top:40px;
+  top:30px;
 }
 
 
@@ -57,7 +75,7 @@ body {
   position: absolute;
   width: 45px;
   height: 45px;
-  background-color: rgba(255, 0, 0, 0.5);
+  background-color: rgba(255, 0, 0, 0.6);
   border-radius: 50%;
   cursor: pointer;
   animation: pulse 1.5s infinite;
@@ -77,7 +95,7 @@ body {
 }
 
 .map-area.completed {
-  background-color: rgba(0, 255, 0, 0.5); /* Green for completed areas */
+  background-color: rgba(0, 255, 0, 0.6); /* Green for completed areas */
 }
 
 .map-area.completed::after {
