--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ body {
   text-align: center;
   margin-top: 0px;
   background: url('./graphics/parchment.png') center/cover;
-  padding: 10px 20px;
+  padding: 0px 10px;
   border: 4px solid #d9a86c; /* Rope-like color */
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
   transform: rotate(-1.5deg);
@@ -163,22 +163,25 @@ body {
   overflow: hidden;
   text-align: center;
   position: relative;
-  font-family: 'Trebuchet MS', sans-serif;
+  font-family: "Caveat Brush", serif;
+  font-style: normal;
+  transform: rotate(0.8deg);
 }
 
 /* Header */
 .modal-header {
   background: #8b5e3c; /* Wood-like color */
   color: #fff;
-  padding: 10px;
-  font-size: 1.5em;
-  font-weight: bold;
+  padding: 5px;
+  font-size: 2em;
+  font-weight: 400;
   border-bottom: 4px solid #d9a86c; /* Rope-like effect */
 }
 
 /* Body */
 .modal-body {
   padding: 20px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: 1.1em;
   color: #333;
 }
@@ -202,6 +205,7 @@ body {
   cursor: pointer;
   font-size: 1em;
   transition: all 0.3s ease-in-out;
+  font-family: "Caveat Brush", serif;
 }
 
 .modal-button:hover {
@@ -234,4 +238,8 @@ body {
   background: #d9a86c;
   border-radius: 0 0 10px 10px;
   box-shadow: 0 -3px 6px rgba(0, 0, 0, 0.3);
+}
+
+#area-title {
+  font-weight: normal !important
 }
