--- a/styles.css
+++ b/styles.css
@@ -322,7 +322,7 @@ body {
 }
 
 
-
+/* main screen button styling */
 button {
   font-family: "Caveat Brush", serif;
   font-size: 16px;
@@ -346,3 +346,8 @@ button:active {
   transform: scale(0.95); /* Shrink effect */
   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.7);
 }
+
+#muteButton {
+  width: 120px;
+}
+
