--- a/styles.css
+++ b/styles.css
@@ -617,25 +617,28 @@ button:active {
 /* Image Section */
 .instructions-modal-image {
   flex: 1;
-  width: 50%;
-  max-width: 50%;
+  /* width: 50%; */
+  /* max-width: 50%; */
   height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-left: 10px;
+  /* padding-left: 10px; */
   margin: 0px;
   /* border-right: 3px solid #ffd700;
   padding-right: 10px; */
+  width: 280px;
   position: relative; /* Position relative for absolute positioning of the image */
-  transform: translate(-8%, 12%); /* Move the image outside the modal */
+  transform: translate(-8%, 12%);
+  /* left: -30px;
+  bottom: -30px; */
   z-index: 1; /* Ensure the image is layered correctly */
 }
 
 .instructions-modal-image img {
-  width: 120%;
+  width: 100%;
   /* height: 300px; */
-  height: 120%;
+  height: 100%;
   /* max-height: 400px; */
   object-fit: contain;
   border-radius: 10px;
@@ -647,7 +650,7 @@ button:active {
 /* Text Section */
 .instructions-modal-text {
   flex: 2;
-  padding-left: 00px;
+  padding-left: 20px;
   color: #272525;
   font-family: "Caveat Brush", serif;
 }
