--- a/styles.css
+++ b/styles.css
@@ -152,13 +152,27 @@ body {
   box-shadow: 0 0 10px #4caf50; /* Glow effect */
   cursor: pointer;
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px; 
+  font-family: "Caveat Brush", serif;
+  color: white;
+  font-weight: normal; 
 }
 
 .map-area.info:hover {
-  transform: scale(1.2); /* Slightly enlarge on hover */
-  box-shadow: 0 0 20px #4caf50; /* Intensify glow on hover */
+  transform: scale(1.2);
+  box-shadow: 0 0 20px #4caf50;
 }
-
+.map-area.info::after {
+  content: "!";
+  position: absolute;
+  font-size: 16px; 
+  color: white; 
+  font-weight: normal; 
+}
 
 .map-area.incomplete::before {
   position: absolute;
