--- a/dubloons.css
+++ b/dubloons.css
@@ -28,3 +28,29 @@
       transform: rotate(var(--rotation));
   }
 }
+
+
+@keyframes vertical-spin {
+  from {
+      transform: rotateY(0deg);
+  }
+  to {
+      transform: rotateY(360deg);
+  }
+}
+
+
+.dubloon-bonus {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  background-image: url('./graphics/dubloon.webp');
+  background-size: cover;
+  animation: rotate 2s linear forwards;
+  animation-delay: var(--delay); /* Delays start of animation */
+  pointer-events: auto;
+}
+
+.vertical-spin {
+  animation: vertical-spin 2s linear infinite;
+}
